FIX SIDEBAR HEIGHT SIZING
Change javascript to resize entire sidebar height, better fade truncate.

--- a/Blog/static/Blog/CSS/styles.css
+++ b/Blog/static/Blog/CSS/styles.css
@@ -463,6 +463,7 @@ svg.tea #steamR {
 	min-width: 0;
 	padding: 0 2em;
 	position: sticky;
+	overflow: hidden;
 	align-self: flex-start;
 }
 
@@ -484,10 +485,6 @@ svg.tea #steamR {
 	text-overflow: ellipsis;
 }
 
-.sidebar .announcement {
-	overflow: hidden;
-}
-
 .sidebar .announcement:after {
 	left: 0;
 	bottom: 0;
@@ -496,7 +493,7 @@ svg.tea #steamR {
 	height: 10em;
 	position: absolute;
 	pointer-events: none;
-	background: linear-gradient(0deg, rgb(255, 255, 255, 1) 10%, rgb(255, 255, 255, 0.7) 50%, rgb(255, 255, 255, 0) 100%);
+	background: linear-gradient(0deg, rgb(255, 255, 255, 1) 0%, rgb(255, 255, 255, 0.5) 50%, rgb(255, 255, 255, 0.2) 100%);
 }
 
 
